2011-07-08  vadim  <vadim@netcitadel.com>

	* parsers/pf.g: see #2556 "PF import: impor of rules referring to
	undefined macros". Importer now records all parser errors in the
	comments of rules where they occurred and marks these rules
	"broken" by coloring them red. Behavior on import of pf.conf file
	with undefined macros is inconsistent at this time: undefined
	macro that appears in a rule where parser expects ip addresses is
	converted to a run-time DNSName object with name "$macro", a
	warning is displayed and rule is marked as "broken". Undefined
	macro in the position of interface name, port name or other
	parameters triggers generic parser error that looks like "Parser
	error: line 26:19: unexpected token: $ext". The rule is marked as
	"broken" and the error is recorded in the comment.

	* PFImporterRun.cpp (substituteMacros): see #2556 "PF import:
	impor of rules referring to undefined macros". Importer displays
	warnings for all undefined macros found in the file, even if there
	are several.

	* objectSignature.cpp: fixes #2559 "Crash on import when at least
	one DynamicGroup object already exists in the object tree."

2011-07-07  Vadim Kurland  <vadim@netcitadel.com>

	* RoutingCompiler.cpp (processNext): see #2191 "Crash when
	compiling a route with table object". Compiler for PF crashed
	when run-time AddressTable object was used in RDst of a routing
	rule.

	* PFImporter.cpp (makeAddressObj): see #2546 "PF import - negation
	inside of inline tables is ignored". Since we can not import
	address lists or tables that contain a mix of negated and
	non-negated items, importer should display an error when it
	enounters one of these and mark all rules that use it as "broken"
	(rule is colored red and error message is added to the comment).

	* PFImporter.cpp (makeAddressObj): see #2556 "PF import: impor of
	rules referring to undefined macros". If pf.conf file uses an
	undefined macro (there is $macro somewhere but the macro has never